Added some new tests in ProjectController